# Sut_Bot

./: .env.prod  README.md  a.py  bot.py  pyproject.toml  uvloop-0.17.0-cp310-cp310-manylinux_2_17_aarch64.manylinux2014_aarch64.whl
.obsidian/: graph.json  workspace-mobile.json
data/repeater_config/: config.json
data/who@me/: data.db
plugins/: cla.py  func.py  w.py
plugins/163/: Untitled.ipynb  __init__.py  a.py  b.py
plugins/a/: __init__.py  __init__.py.bak  a.py  usage.txt
plugins/atri/: __init__.py  a.py  data.py
plugins/atri/resources/: a.json
plugins/atri/resources/text/: atri.json
plugins/b/: __init__ (1).py  __init__ (2).py  __init__.py
plugins/c/: __init__ (1).py  __init__.py  draw.py
plugins/d/: __init__.py  __init__.py.bak.bak  __init__.py.bak.py  amath.py  cf.json  classes.py  make.py  maker.py  method.py  pydata  score.json  things.json  things.py
plugins/g/: __init__.py  test.json
plugins/gm/: __init__.py
plugins/kugou/: __init__.py
plugins/qqm/: __init__.py
plugins/test/: __init__.py
plugins/wiki/: __init__.py  a.js  a.js.bak  a.json  a.py  b.py  c.py  linuxcommands.py
plugins/yande/: __init__.py
